[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toollm"
version = "0.1.0"
description = "Tools for LLM"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "zhixiangxue"}
]
keywords = ["llm", "tools", "ai", "automation", "command-runner", "web-scraping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "psutil>=5.8.0",
]

[tool.setuptools.packages.find]
include = ["toollm*"]
exclude = ["playground*", "tests*", "docs*"]

[project.urls]
Homepage = "https://github.com/zhixiangxue/toollm"
Repository = "https://github.com/zhixiangxue/toollm"
Issues = "https://github.com/zhixiangxue/toollm/issues"
